fixed possible undefined not being handles in ball.component template

--- a/src/app/breedable/components/ball/ball.component.html
+++ b/src/app/breedable/components/ball/ball.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngxAlias="gridAppearance$ | async as gridAppearance">
   <ng-container *ngxAlias="hideItems$ | async as hideItems">
-    <app-grid *ngIf="worksheet" [appearance]="gridAppearance" [hideInactiveItems]="hideItems">
+    <app-grid *ngIf="worksheet" [appearance]="gridAppearance" [hideInactiveItems]="!!hideItems">
       <ng-container *ngFor="let entry of worksheet?.data; trackBy: trackBy">
         <app-grid-item [pokemon]="entry | castBreedable"></app-grid-item>
       </ng-container>
