fixed detailed move rendering when move type is unknown

--- a/src/app/grid/detailed/detailed.component.scss
+++ b/src/app/grid/detailed/detailed.component.scss
@@ -219,6 +219,7 @@
   background-size: 24px;
   background-position: 3px;
   justify-content: space-between;
+  background-color: #dbdbdb;
 }
 
 $types: "water" #8CADE0,
