--- a/src/app/tools/breeding/breeding.component.scss
+++ b/src/app/tools/breeding/breeding.component.scss
@@ -34,3 +34,36 @@
   border-top-right-radius: 4px;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
+
+.breeding-move-grid {
+  display: grid;
+  grid-template-columns: fit-content(0%) 1fr;
+  grid-template-rows: 1fr;
+  gap: 20px 0;
+  grid-template-areas:
+    ". .";
+
+  .move-name {
+    white-space: nowrap;
+    background: #2b2828;
+    color: #fff;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    padding: 12px;
+    font-weight: 500;
+    z-index: 1;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
+  }
+
+  .grid.minimal {
+    background: #fff;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 4px 8px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
+
+    .grid-item {
+      background: rgba(117, 104, 226, 0.1);
+    }
+  }
+}
