--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
@@ -64,7 +63,9 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
-  body   { background: linear-gradient(55deg,rgba(52, 63, 111, 0.3) 40%,rgba(44, 130, 125, 0.3) 80%),radial-gradient(circle,#353435 14%,#19151b 42%,#031925 80%);  }
+  body {
+    background: linear-gradient(55deg, rgba(52, 63, 111, 0.3) 40%, rgba(44, 130, 125, 0.3) 80%), radial-gradient(circle, #353435 14%, #19151b 42%, #031925 80%);
+  }
 }
 
 ul, ol {
@@ -150,10 +151,23 @@ a {
   margin-bottom: $gap-size;
 }
 
-.d-flex{
+.d-flex {
   display: flex;
 }
 
-.t-align-center{
+.t-align-center {
   text-align: center;
+}
+
+
+/**
+Mat Tooltip
+ */
+
+.mat-tooltip-panel .mat-tooltip {
+  background: rgb(255 255 255 / 0.95);
+  color: #000;
+  font-size: 13px;
+  max-width: 350px;
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
