--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,6 +135,10 @@ a {
   }
 }
 
+.m-0 {
+  margin: 0;
+}
+
 .m-right-gap {
   margin-right: $gap-size;
 }
@@ -159,6 +163,13 @@ a {
   text-align: center;
 }
 
+.card {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  background-color: #fff;
+  border-radius: 3px;
+  margin-bottom: 20px;
+  padding: 20px;
+}
 
 /**
 Mat Tooltip
