added shiny dex to routing

--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -5,6 +5,9 @@
     <app-sub-navi-item [link]="['breeding']" [text]="'Breeding'">
       <app-item category="key-item" slug="oval-charm"></app-item>
     </app-sub-navi-item>
+    <app-sub-navi-item [link]="['shiny-dex']" [text]="'Shiny Dex'">
+      <app-item category="key-item" slug="shiny-charm"></app-item>
+    </app-sub-navi-item>
   </ul>
 </aside>
 <div class="view-content">
