--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -1,10 +1,6 @@
 <header class="view-header">breedables</header>
 <div class="view-addional-content">
-  <app-changer (selectionChanged)="changeGrid($event)" class="m-right-gap"></app-changer>
-  <app-checkbox [formControl]="toggleInactivesControl" (change)="changeGridInactives()"
-                [icon]="toggleInactivesControl.value ? 'visibility_off': 'visibility'">
-    {{toggleInactivesControl.value ? 'Unowned hidden' : 'Unowned visible'}}
-  </app-checkbox>
+  <app-grid-controller></app-grid-controller>
 </div>
 <aside class="view-sidebar">
   <ul class="sub-navi" *ngIf="worksheets">
