--- a/src/app/grid/grid-controller/grid-controller.component.html
+++ b/src/app/grid/grid-controller/grid-controller.component.html
@@ -1,1 +1,5 @@
-<p>grid-controller works!</p>
+<app-changer (selectionChanged)="changeGrid($event)" class="m-right-gap"></app-changer>
+<app-checkbox [formControl]="toggleInactivesControl" (change)="changeGridInactives()"
+              [icon]="toggleInactivesControl.value ? 'visibility_off': 'visibility'">
+  {{toggleInactivesControl.value ? 'Unowned hidden' : 'Unowned visible'}}
+</app-checkbox>
