added grid controller to tools

--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,5 +1,7 @@
 <header class="view-header">Tools</header>
-<div class="view-addional-content"></div>
+<div class="view-addional-content">
+  <app-grid-controller></app-grid-controller>
+</div>
 <aside class="view-sidebar">
   <ul class="sub-navi">
     <app-sub-navi-item [link]="['breeding']" [text]="'Breeding'">
