--- a/src/app/valuable/components/index/index.component.html
+++ b/src/app/valuable/components/index/index.component.html
@@ -1,6 +1,6 @@
 <header class="view-header">valuables</header>
 <div class="view-addional-content">
-  <app-changer (selectionChanged)="changeGrid($event)" class="m-right-gap"></app-changer>
+  <app-grid-controller></app-grid-controller>
 </div>
 <aside class="view-sidebar">
   <ul class="sub-navi" *ngIf="worksheets">
