added cursor pointer to history entry and save button to signalize action

--- a/src/app/spreadsheet-changer/index/index.component.scss
+++ b/src/app/spreadsheet-changer/index/index.component.scss
@@ -17,6 +17,7 @@
 }
 
 .history-entry {
+  cursor: pointer;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -24,5 +25,6 @@
 }
 
 .save-button {
+  cursor: pointer;
   width: auto;
 }
