added lighter placeholders for inputs

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -205,4 +205,23 @@ Mat Tooltip
     border-radius: 20px;
     border: 3px solid #131c21;
   }
+
+  .mat-input-element {
+    &::placeholder {
+      color: #8b949e;
+      opacity: 1;
+    }
+
+    &:-ms-input-placeholder { /* Internet Explorer 10-11 */
+      color: #8b949e;
+    }
+
+    &::-ms-input-placeholder { /* Microsoft Edge */
+      color: #8b949e;
+    }
+
+
+
+  }
+
 }
