--- a/src/app/spreadsheet-changer/index/index.component.scss
+++ b/src/app/spreadsheet-changer/index/index.component.scss
@@ -1,6 +1,6 @@
 #search, .history-entry, .save-button {
   font-size: 90%;
-  font-weight: bold;
+  font-weight: 500;;
   letter-spacing: -1px;
   line-height: 32px;
   color: #000;
@@ -27,4 +27,11 @@
 .save-button {
   cursor: pointer;
   width: auto;
+}
+
+@media (prefers-color-scheme: dark) {
+  #search, .history-entry, .save-button {
+    background: #21262d;
+    color: #efe2e3;
+  }
 }
