moved spinner into own component

--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -1,1 +1,10 @@
-<p>spinner works!</p>
+<div class="top">
+  <div class="top-color"></div>
+</div>
+<div class="bottom">
+  <div class="bottom-color"></div>
+</div>
+<div class="line"></div>
+<div class="button-wrapper">
+  <div class="button"></div>
+</div>
