reordered grid items in spreadsheet changer

--- a/src/app/spreadsheet-changer/index/index.component.scss
+++ b/src/app/spreadsheet-changer/index/index.component.scss
@@ -35,3 +35,11 @@
     color: #efe2e3;
   }
 }
+
+@media screen and (max-width: 720px) {
+  .spreadsheet-changer-view {
+    .view-sidebar {
+      order: 2;
+    }
+  }
+}
