wrap ball line in legality table

--- a/src/app/breedable/components/overview/overview.component.scss
+++ b/src/app/breedable/components/overview/overview.component.scss
@@ -45,3 +45,13 @@
     background: #2f3232;
   }
 }
+
+@media screen and (max-width: 720px) {
+  .legality-row {
+    flex-wrap: wrap;
+
+    .name {
+      width: 100%;
+    }
+  }
+}
