--- a/src/app/shared/components/checkbox/checkbox.component.scss
+++ b/src/app/shared/components/checkbox/checkbox.component.scss
@@ -33,5 +33,14 @@ $grid-changer-height: 24px;
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  .inacitve-hider {
+    background:#21262d;
+    color: #efe2e3;
 
-
+    input:checked ~ .label, input:checked ~ .material-icons {
+      background:  #161b22;
+      color: #58a6ff;
+    }
+  }
+}
