darkened minimal grid item background in dark mode

--- a/src/app/grid/minimal/minimal.component.scss
+++ b/src/app/grid/minimal/minimal.component.scss
@@ -22,3 +22,10 @@
     }
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .grid.minimal .grid-item {
+    background: rgb(0 0 0 / 22%);
+  }
+}
+
