--- a/src/app/spreadsheet-changer/index/index.component.scss
+++ b/src/app/spreadsheet-changer/index/index.component.scss
@@ -1,7 +1,6 @@
 #search, .history-entry, .save-button {
   font-size: 90%;
-  font-weight: 500;;
-  letter-spacing: -1px;
+  font-weight: 500;
   line-height: 32px;
   color: #000;
   border-radius: 42px;
