added spinner to loading screen in spreadsheet changer

--- a/src/app/spreadsheet-changer/index/index.component.html
+++ b/src/app/spreadsheet-changer/index/index.component.html
@@ -41,9 +41,9 @@
   </app-ball-guy-bubble>
 </ng-template>
 <ng-template #pendingTemplate>
-
   <div *ngIf="hasRequested">
-    Load spreadsheet
+    <app-spinner class="centered-spinner"></app-spinner>
+    <div class="t-align-center">Load spreadsheet</div>
   </div>
 </ng-template>
 <ng-template #errorTemplate let-error="error">Error: {{ error.message }}</ng-template>
