--- a/src/app/spreadsheet-changer/index/index.component.html
+++ b/src/app/spreadsheet-changer/index/index.component.html
@@ -21,11 +21,18 @@
       *ngxSubscribe="let loadedSpreadsheet of loadedSpreadsheet$; beforeAny pendingTemplate onError errorTemplate">
       <ng-container *ngIf="loadedSpreadsheet">
         <div class="view-subheader">{{loadedSpreadsheet.title}}</div>
-        <div *ngIf="loadedSpreadsheet.hasValuables">
-          Contains valuables.
+        <div class=""></div>
+        <div class="collection-infos" *ngIf="loadedSpreadsheet.hasValuables">
+          <div class="title">Contains valuables!</div>
+          <div class="text">Valuables are Pokémon with a certain rarity. Event, shiny, competitive, legendary Pokémon
+            and others.
+          </div>
         </div>
-        <div *ngIf="loadedSpreadsheet.hasBreedables">
-          Contains breedables.
+        <div class="collection-infos" *ngIf="loadedSpreadsheet.hasBreedables">
+          <div class="title">Contains breedables!</div>
+          <div class="text">Breedables are Pokémon, which can be bred or are a result of breeding. They are usually
+            collected in different kind of balls like Bulbasaur in a Friend Ball.
+          </div>
         </div>
         <div class="button-row">
           <button class="save-button" (click)="saveSpreadsheet(loadedSpreadsheet)">Save as current spreadsheet</button>
@@ -37,7 +44,7 @@
 
 <ng-template #notRequestedYet>
   <app-ball-guy-bubble>
-    Enter a spreadsheet Id to load a spreadsheet
+    Enter a spreadsheet ID to load a spreadsheet.
   </app-ball-guy-bubble>
 </ng-template>
 <ng-template #pendingTemplate>
