added more text to ball guy bubble

--- a/src/app/spreadsheet-changer/index/index.component.html
+++ b/src/app/spreadsheet-changer/index/index.component.html
@@ -44,7 +44,9 @@
 
 <ng-template #notRequestedYet>
   <app-ball-guy-bubble>
-    Enter a spreadsheet ID to load a spreadsheet.
+    <div>Enter a spreadsheet ID to load a spreadsheet.</div>
+    <div>Make sure the spreadsheet with that given ID is published to web and made from the template!</div>
+    <div>Currently no other spreadsheet template it supported.</div>
   </app-ball-guy-bubble>
 </ng-template>
 <ng-template #pendingTemplate>
