added container to help section

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,6 +125,14 @@ a {
 
 }
 
+.container{
+  padding: 3rem;
+  width: 100%;
+  max-width: 1200px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
 .button-row {
   padding: 16px 0;
 }
