lightened body/view color a little bit in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -202,7 +202,7 @@ Mat Tooltip
 @media (prefers-color-scheme: dark) {
 
   body, html, .view .view-header {
-    color: #d0c4c5;
+    color: #e0d4d5;
   }
 
 
